--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -228,33 +228,32 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Build sketch-paths >= 8kb
-        if: ${{ matrix.device.available-flash-kB >= 8 }}
-        env:
-          job_sketch_paths: |
-            ${{ env.available-flash-8kB-sketch-paths }}
-            ${{ env.available-flash-4kB-sketch-paths }}
-            ${{ env.available-flash-2kB-sketch-paths }}
-        run: >
-          echo "sketch paths: $job_sketch_paths"
-          echo "job_sketch_paths=$job_sketch_paths" >> $GITHUB_ENV
+      # - name: Build sketch-paths >= 8kb
+      #   if: ${{ matrix.device.available-flash-kB >= 8 }}
+      #   env:
+      #     job_sketch_paths: |
+      #       ${{ env.available-flash-8kB-sketch-paths }}
+      #       ${{ env.available-flash-4kB-sketch-paths }}
+      #       ${{ env.available-flash-2kB-sketch-paths }}
+      #   run: >
+      #     echo "sketch paths: $job_sketch_paths"
 
-      - name: Build sketch-paths == 4kb
-        if: ${{ matrix.device.available-flash-kB == 4}}
-        env:
-          job_sketch_paths: |
-            ${{ env.available-flash-4kB-sketch-paths }}
-            ${{ env.available-flash-2kB-sketch-paths }}
-        run: >
-          echo "sketch paths: $job_sketch_paths"
+      # - name: Build sketch-paths == 4kb
+      #   if: ${{ matrix.device.available-flash-kB == 4}}
+      #   env:
+      #     job_sketch_paths: |
+      #       ${{ env.available-flash-4kB-sketch-paths }}
+      #       ${{ env.available-flash-2kB-sketch-paths }}
+      #   run: >
+      #     echo "sketch paths: $job_sketch_paths"
 
-      - name: Build sketch-paths == 2kb
-        if: ${{ matrix.device.available-flash-kB == 2 }}
-        env:
-          job_sketch_paths: |
-            ${{ env.available-flash-2kB-sketch-paths }}
-        run: >
-          echo "sketch paths: $job_sketch_paths"
+      # - name: Build sketch-paths == 2kb
+      #   if: ${{ matrix.device.available-flash-kB == 2 }}
+      #   env:
+      #     job_sketch_paths: |
+      #       ${{ env.available-flash-2kB-sketch-paths }}
+      #   run: >
+      #     echo "sketch paths: $job_sketch_paths"
 
       - name: Build fqbn with soft serial
         if: ${{ matrix.soft-serial != 0 }}
@@ -268,17 +267,61 @@ jobs:
           export job_fqbn=${{ env.platform-name }}:${{ matrix.device.name }},clock=internal_8m
           echo "job_fqbn=$job_fqbn" >> $GITHUB_ENV
 
-      - name: debug paths
-        run: >
-          echo ${{ env.job_sketch_paths }}
-
       # See: https://github.com/arduino/compile-sketches/README.md
-      - name: Compile examples (all default)
+      - name: Compile examples >= 8kb
+        if: ${{ matrix.device.available-flash-kB >= 8 }}
         uses: arduino/compile-sketches@main
         with:
           fqbn: ${{ env.job_fqbn }}
           sketch-paths: |
-            ${{ env.job_sketch_paths }}
+            ${{ env.available-flash-8kB-sketch-paths }}
+            ${{ env.available-flash-4kB-sketch-paths }}
+            ${{ env.available-flash-2kB-sketch-paths }}
+          platforms: |
+            # Install ATTinyCore via Boards Manager for the toolchain
+            - source-url: http://drazzy.com/package_drazzy.com_index.json
+              name: ${{ env.platform-name }}
+            # Overwrite the ATTinyCore release version with the platform from the local path
+            - source-path: avr
+              name: ${{ env.platform-name }}
+          libraries: |
+            # The sketches don't have any external library dependencies, so just define an empty array
+            -
+          verbose: false
+          enable-deltas-report: true
+          enable-warnings-report: true
+          sketches-report-path: sketches-reports
+
+      - name: Compile examples == 4kb
+        if: ${{ matrix.device.available-flash-kB == 4 }}
+        uses: arduino/compile-sketches@main
+        with:
+          fqbn: ${{ env.job_fqbn }}
+          sketch-paths: |
+            ${{ env.available-flash-4kB-sketch-paths }}
+            ${{ env.available-flash-2kB-sketch-paths }}
+          platforms: |
+            # Install ATTinyCore via Boards Manager for the toolchain
+            - source-url: http://drazzy.com/package_drazzy.com_index.json
+              name: ${{ env.platform-name }}
+            # Overwrite the ATTinyCore release version with the platform from the local path
+            - source-path: avr
+              name: ${{ env.platform-name }}
+          libraries: |
+            # The sketches don't have any external library dependencies, so just define an empty array
+            -
+          verbose: false
+          enable-deltas-report: true
+          enable-warnings-report: true
+          sketches-report-path: sketches-reports
+
+      - name: Compile examples == 2kb
+        if: ${{ matrix.device.available-flash-kB == 2 }}
+        uses: arduino/compile-sketches@main
+        with:
+          fqbn: ${{ env.job_fqbn }}
+          sketch-paths: |
+            ${{ env.available-flash-2kB-sketch-paths }}
           platforms: |
             # Install ATTinyCore via Boards Manager for the toolchain
             - source-url: http://drazzy.com/package_drazzy.com_index.json
